# zellij-vertical-sessions

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.zh.md
examples/: minimal.kdl  vertical-sessions-left.kdl  vertical-sessions-right.kdl
src/: main.rs
